all docker image created, environment agnostic

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
 
 server:
   port: 9000
+
+document-analysis:
+  solr-url: ${SOLR_URL}
+  translation-cache-file-path: ${TRANSLATION_CACHE_PATH}
