--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,12 @@
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
+    "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.4",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
